Navbar Few Alignments Fixed

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .navbar {
 	position: fixed;
+	top: 0;
 	height: 60px;
 	padding: 0 20px;
 	background-color: #fffc;
@@ -18,7 +19,6 @@
 .celestaLogo {
 	font-weight: 900;
 	font-size: xx-large;
-	z-index: 6;
 	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
@@ -37,6 +37,7 @@
 	width: fit-content;
 	max-width: 20vw;
 	display: flex;
+	white-space: nowrap;
 	align-items: center;
 	justify-content: center;
 	margin: 0 5px;
@@ -78,7 +79,6 @@
 
 .hamburger {
 	display: none;
-	z-index: 6;
 }
 
 .hamburgerButton {
@@ -96,10 +96,11 @@
 		transform: translateY(-100%);
 		position: absolute;
 		width: 100vw;
-		top: 60px;
+		top: 0px;
 		background-color: #fff8;
 		height: fit-content;
 		max-height: 50vh;
+		min-height: 250px;
 		left: 0;
 		flex-direction: column;
 		gap: 20px;
@@ -111,6 +112,7 @@
 
 	.active {
 		opacity: 1;
+		top: 60px;
 		transform: translateY(0);
 	}
 
